<resources>
    <string name="app_name">Huerta directa</string>
    <string name="txtInformacion">En Huerta Directa, te conectamos con productos campesinos frescos y de calidad,\ncosechados directamente por manos locales.Disfruta de alimentos 100% naturales,\nsin intermediarios y al mejor precio. ¡Comer sano y apoyar al campo nunca fue tan fácil!</string>
    <string name="txtHuerta">Bienvenidos a Huerta directa</string>
    <string name="btnIniciar">Comenzar</string>
    <string name="txt2">Huerta directa</string>
    <string name="EditText1">Nombre de usuario</string>
    <string name="EditText2">Contraseña</string>
    <string name="txtDatos">Ingresar datos:</string>
    <string name="btn2">Iniciar sesion</string>
    <string name="btnProductos">Productos</string>
    <string name="btnCategorias">Categorias</string>
    <string name="btnVolver2">Volver</string>
    <string name="btnVolvere">Volver</string>
    <string name="btnVolverInicio">Volver a inicio</string>
    <string name="btnSalir">Salir</string>
</resources>